2010-11-16  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/reccard.py (DescriptionEditorModule.update_from_database):
	Fix signal used for spinbutton for yield and any other
	spinbuttons. (patch from Saulius Lukauskas)

	* src/lib/plugins/import_export/mastercook_import_plugin/mastercook_plaintext_importer.py:
	Patch from Saulius Lukauskas fixing column-matching/dash-matching
	conflict that broke ingredient import.

2010-10-20  Thomas Hinkle  <tom@grenville>

	* src/lib/plugins/web_plugin/gourmetweb/templates/rec.html: Start
	adding some style to web-based recipe view.

	* src/lib/backends/db.py (RecData.add_column_to_table): Workaround
	sqlalchemy 0.6.0 incompatability

	* src/lib/plugins/nutritional_information/nutrition.py (NutritionData.get_nutinfo_for_ing):
	Take into account amounts on recipes called as ingredients.

2010-08-01  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/plugins/web_plugin/gourmetweb/templates/rec.html: Add
	AJAX magic to do multiplication ajax-style when javascript is
	available.

2010-07-30  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/shopping.py: Refactor code -- move some code from
	shopgui classes to front-end neutral ShoppingList class that can
	be base class for HTML front-end.

	* src/lib/shopgui.py: Refactor code to allow web-front-end


	* src/lib/plugins/web_plugin/: Start a django-based web-front-end
	to Gourmet

2010-07-21  Thomas M. Hinkle  <tom@grenville>

	* src/lib/version.py (version): Version->0.15.6

2010-07-20  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/import_export/web_import_plugin/generic_web_importer_plugin.py (GenericWebImporter.mimetypes):
	Fixed bug in mimetypes, by adding expected application/xhtml+xml
	type.

	* src/lib/backends/db.py (RecData.get_criteria): Fix another
	sqlalchemy-API-change-caused bug.

2010-07-13  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.save): Try to work around
	sqlalchemy bug that seems to through error on some (extra?)
	commits.
