@@ -1,3 +1,8 @@
+2010-11-28  Thomas Mills Hinkle  <tom@pebble>
+
+	* src/lib/backends/db.py (RecData.update_version_info): Patch from Jeff Raber to remove sqlite3 reference
+	(RecData.get_unique_values): Patch from buergi to get working with MySQL
+
 2010-11-16  Thomas Mills Hinkle  <tom@pebble>
 
 	* src/lib/reccard.py (DescriptionEditorModule.update_from_database):
